# ReasonFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: llama-3.2-o1.ipynb  phi-4-medit-10b-o1.ipynb
reasonflow/: __init__.py  multi_path_forward.py  multi_path_generation.py  reasonflow.py  utils.py
reasonflow/generation/: __init__.py  config.py  selection.py  temperature.py  thoughts.py  uncertainty.py  utils.py
reasonflow/hooks/: last_hs_hook.py
